--- a/React.js/react-chat-example/src/index.css
+++ b/React.js/react-chat-example/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    body {
+        @apply bg-slate-900;
+        @apply container;
+        @apply m-auto;
+        @apply text-slate-200;
+        @apply font-Jost;
+    }
+
+    #root {
+        @apply h-screen;
+        @apply p-4;
+        @apply lg:p-6;
+        @apply flex;
+        @apply flex-col;
+        @apply gap-8;
+        @apply items-center;
+        @apply justify-between;
+    }
+
+    header {
+        @apply text-center;
+        @apply text-slate-200;
+    }
+
+    header h1 {
+        @apply flex;
+        @apply gap-4;
+        @apply items-center;
+        @apply justify-center;
+        @apply text-3xl;
+        @apply lg:text-5xl;
+        @apply font-semibold;
+    }
+
+    header h2 {
+        @apply mt-4;
+        @apply text-base;
+        @apply lg:text-3xl;
+    }
+
+    a {
+        @apply transition-colors;
+        @apply duration-200;
+    }
+
+    p {
+        @apply text-lg;
+        @apply text-slate-500;
+        @apply dark:text-white;
+    }
+
+    h1, h2, h3, h4, h5 {
+        @apply dark:text-white;
+    }
 }
